# fastapi-config

./: .gitignore  README.md  README.zh.md  pyproject.toml
.github/: dependabot.yml
demo/: admin.py  amisadmin.db  config.py  main.py
fastapi_config/: README.md  README.zh.md  __init__.py  admin.py  backends.py  globals.py  models.py
fastapi_config/extensions/: redis.py
fastapi_config/locale/de_DE/LC_MESSAGES/: messages.mo  messages.po
fastapi_config/locale/zh_CN/LC_MESSAGES/: messages.mo  messages.po
tests/: DbConfigStoreTest.py  conftest.py  test_DbConfigStore.py  test_globals.py
