[project]
name = "fastapi_config"
authors = [
    { name = "Atomi", email = "1456417373@qq.com" },
]
description = "FastAPI-Config is a visual dynamic configuration management extension based on FastAPI-Amis-Admin."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
keywords = [
    "FastAPI-Amis-Admin",
    "FastAPI-Config",
    "Python-Config",
]
classifiers = [
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "fastapi-amis-admin>=0.6.4",
    "asyncer>=0.0.1",
    "sqlalchemy-database>=0.1.0",
]

[project.urls]
-Source = "https://github.com/amisadmin/fastapi_config"
FastAPI-Amis-Admin = "https://github.com/amisadmin/fastapi_amis_admin"

[project.optional-dependencies]
test = [
    "pytest>=7.1.3",
    "aiosqlite>=0.17.0",
    "pytest-asyncio>=0.19.0",
]
demo = [
    "pydantic[email]>=1.10.1",
    "uvicorn>=0.18.3",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.version]
source = "file"
path = "fastapi_config/__init__.py"

[tool.pdm.build]
# File patterns to include, the paths are relative to the project root.
includes = [
    "fastapi_config/**",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.3",
    "pre-commit>=2.20.0",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
test= "pytest"

[tool.isort]
profile = "black"
atomic = true
filter_files = true

[tool.black]
line-length = 130
include = '\.pyi?$'

# pytest
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
# pytest-asyncio
asyncio_mode = "auto"